--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-dev-docs",
+  "name": "modelica-buildings-templates",
   "version": "0.0.0",
   "private": true,
   "scripts": {
